# SpaceWalk-backend

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  download_commands.txt  mypy.ini  pyproject.toml
doc/: architecture.md  data-preparation-pipeline.md
scripts/: compare_movements.py  distance_check.py  entry.py  groupcat_combine.py  hermite_spline.py  mergerTreeHandle.py  send_api.py  test.npy
tng_sv/: __main__.py  cli.py  plot.py  serve.py
tng_sv/api/: __init__.py  download.py  utils.py
tng_sv/data/: __init__.py  dir.py  field_type.py  part_type.py  utils.py
tng_sv/preprocessing/: __init__.py  two_field_operations.py  webapp.py
webScripts/api/: backend.py  debugMain.py
webScripts/octree/: OctreeGeneration.py  OctreeLoad.py  OctreeTraversal.py
webScripts/preprocessing/: OctreeGeneration.py  beispiele.py  gridGeneration.py
