[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >=65.0.0",
    "setuptools-scm",
    "build",
]

[project]
name = "tng_sv"
description = "tng sv"
requires-python = ">=3.7"
# version = "0.0.1"
dynamic = ["version"]
dependencies = [
    "typer",
    "requests",
    "tqdm",
    "numpy",
    "h5py",
    "vtk",
    "matplotlib",
    "open3d",
    "fastapi",
    "pydantic",
    "uvicorn",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-sugar",
]
dev = [
    "flake8",
    "pylint",
    "black",
    "mypy",
    "pre-commit",
    "types-requests",
    "types-tqdm",
]

[project.scripts]
tng-sv-cli = "tng_sv.cli:cli"

[tool.black]
line-length= 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.pylint.messages_control]
max-line-length = 120

[tool.setuptools]
packages = ["tng_sv"]

[tool.isort]
multi_line_output = 3
line_length = 120
profile = "black"
